--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
 
         <script>
-        var conn = new WebSocket('ws://localhost:8081');
+        var conn = new WebSocket('ws://' + location.host);
 
         conn.onmessage = function(e) {
             var d = JSON.parse(e.data);
